--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <div class="conteudo">
             <div class="informacoes">
-                <a href="file:///C:/Users/Wesley/Documents/TheLastProject/index.html">
+                <a href="https://dan1nicolas.github.io/projeto-the-last-of-us/">
                     <img class="logo" src="./src/imagens/logo.png" alt="Logo/referência The Last of Us">
                 </a>
                 
@@ -50,9 +50,9 @@
 
          <aside class="redesSociais">
             <ul>
-                <li><a  href="https://www.youtube.com/watch?v=3HbasM2reXg" target="_blank"><img src="./src/imagens/github.svg" alt="ícone Github" class="icone"></a></li>
+                <li><a  href="https://github.com/Dan1Nicolas" target="_blank"><img src="./src/imagens/github.svg" alt="ícone Github" class="icone"></a></li>
                 
-                <li><a href="#"><img src="./src/imagens/linkedin-in.svg" alt="ícone linkedin-in" class="icone"></a></li>
+                <li><a href="https://www.linkedin.com/in/daniel-leoterio-153561261/"><img src="./src/imagens/linkedin-in.svg" alt="ícone linkedin-in" class="icone"></a></li>
             </ul>
         </aside> 
     </main>
