--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <ul>
                 <li><a  href="https://github.com/Dan1Nicolas" target="_blank"><img src="./src/imagens/github.svg" alt="ícone Github" class="icone"></a></li>
                 
-                <li><a href="https://www.linkedin.com/in/daniel-leoterio-153561261/"><img src="./src/imagens/linkedin-in.svg" alt="ícone linkedin-in" class="icone"></a></li>
+                <li><a href="https://www.linkedin.com/in/daniel-leoterio-153561261/" target="_blank"><img src="./src/imagens/linkedin-in.svg" alt="ícone linkedin-in" class="icone"></a></li>
             </ul>
         </aside> 
     </main>
